@@ -585,10 +585,15 @@ flo_to_s(VALUE flt)
 	}
 	else if (decpt - digs < float_dig) {
 	    long len;
+	    char *ptr;
 	    rb_str_cat(s, buf, digs);
 	    rb_str_resize(s, (len = RSTRING_LEN(s)) + decpt - digs + 2);
-	    if (decpt > digs) memset(RSTRING_PTR(s) + len, '0', decpt - digs);
-	    rb_str_cat(s, ".0", 2);
+	    ptr = RSTRING_PTR(s) + len;
+	    if (decpt > digs) {
+		memset(ptr, '0', decpt - digs);
+		ptr += decpt - digs;
+	    }
+	    memcpy(ptr, ".0", 2);
 	}
 	else {
 	    goto exp;
